# sliceymon-expansion

./: .gitignore  BALANCE_REVIEW.md  CLAUDE.md  HANDOFF.md  SPEC.md  textmod_expanded.txt  textmod_heroes_only.txt
compiler/: Cargo.toml  build.rs
compiler/examples/: drift_audit.rs  dump_source_bodies.rs  roundtrip_diag.rs
compiler/src/: constants.rs  error.rs  finding.rs  lib.rs  main.rs  util.rs  validator.rs  xref.rs
compiler/src/authoring/: face_id.rs  mod.rs  replica_item.rs  sprite.rs
compiler/src/builder/: boss_emitter.rs  capture_emitter.rs  chain_emitter.rs  derived.rs  fight_emitter.rs  hero_emitter.rs  mod.rs  monster_emitter.rs  options.rs  phase_emitter.rs  replica_item_emitter.rs  reward_emitter.rs  structural_emitter.rs
compiler/src/extractor/: boss_parser.rs  capture_parser.rs  chain_parser.rs  classifier.rs  fight_parser.rs  hero_parser.rs  level_scope_parser.rs  mod.rs  monster_parser.rs  phase_parser.rs  replica_item_parser.rs  reward_parser.rs  richtext_parser.rs  splitter.rs  structural_parser.rs
compiler/src/ir/: merge.rs  mod.rs  ops.rs
compiler/tests/: audit_lib_panic_free.rs  boss_tests.rs  build_options_tests.rs  builder_tests.rs  capture_tests.rs  classifier_tests.rs  correctness_tests.rs  doc_invariants_carveouts.toml  doc_invariants_carveouts_parses.rs  expansion_tests.rs  hero_tests.rs  integration_tests.rs  ir_tests.rs  merge_tests.rs  path_c_merge_tests.rs  retirements.rs  roundtrip_baseline.rs  roundtrip_tests.rs  spec_amendments.rs  splitter_tests.rs  validator_tests.rs
compiler/tests/baselines/roundtrip/: pansaer.baseline  (+3 more)
(+77 files in other folders)
