[package]
name = "textmod-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
phf = { version = "0.11", features = ["macros"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"] }

[build-dependencies]
phf_codegen = "0.11"

[dev-dependencies]
assert_cmd = "2"
proptest = "1"
toml = "0.8"
